--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,7 @@
     "todos-app-feature-todos": { "tags": [] },
     "todos-app-ui-header": { "tags": [] },
     "todos-app-ui-material": { "tags": [] },
-    "todos-app-ui-todos-list": { "tags": [] }
+    "todos-app-ui-todos-list": { "tags": [] },
+    "todos-app-data-access-todos": { "tags": [] }
   }
 }
