--- a/package.json
+++ b/package.json
@@ -42,6 +42,12 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@ngrx/component-store": "^11.0.0",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/entity": "^11.0.0",
+    "@ngrx/router-store": "^11.0.0",
+    "@ngrx/store": "^11.1.1",
+    "@ngrx/store-devtools": "^11.1.1",
     "@nrwl/angular": "^12.0.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
@@ -57,6 +63,8 @@
     "@angular/language-service": "^11.2.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@ngrx/schematics": "^11.1.1",
+    "@ngrx/store-devtools": "^11.0.0",
     "@nrwl/cli": "11.6.2",
     "@nrwl/cypress": "12.0.7",
     "@nrwl/eslint-plugin-nx": "11.6.2",
