--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
     "@material/layout-grid": "^11.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/mapped-types": "^0.4.1",
     "@nestjs/platform-express": "^7.0.0",
     "@ngrx/component-store": "^11.0.0",
     "@ngrx/effects": "^11.1.1",
-    "@ngrx/entity": "^11.0.0",
+    "@ngrx/entity": "^11.1.1",
     "@ngrx/router-store": "^11.0.0",
     "@ngrx/store": "^11.1.1",
     "@ngrx/store-devtools": "^11.1.1",
@@ -52,6 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
@@ -76,6 +78,7 @@
     "@nrwl/workspace": "11.6.2",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "cypress": "^6.0.1",
