--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,7 @@
     "api-todo-detail": { "tags": [] },
     "api-shared-data": { "tags": [] },
     "todos-app-util-auto-unsubscribe": { "tags": [] },
-    "todos-app-ui-loading-indicator": { "tags": [] }
+    "todos-app-ui-loading-indicator": { "tags": [] },
+    "todos-app-ui-header": { "tags": [] }
   }
 }
